Исправил тесты и добавил конкретики в ErrorResponse, теперь они возвращают доп значения с id и полями, с которыми возникли проблемы